# fast_api_online_course_platform

./: .gitignore  README.md  pyproject.toml  pytest.ini
app/: __init__.py  db_test.sqlite3  main.py
app/api/: __init__.py
app/api/auth/: __init__.py  routes.py  schemas.py  utils.py
app/api/demo_auth/: demo_jwt_auth.py  views.py
app/core/: config.py
app/crud/: __init__.py  course.py  course_user_relationship.py  dependencies.py  user.py
app/db/: __init__.py  base.py  models.py  session.py
app/pages_routes/: __init__.py  course.py  main.py  user.py
app/utils/: __init__.py  checking.py  users.py
auth/: utils.py
migrations/: env.py
migrations/versions/: 2024_08_03_2330-a53c2ccc61f9_.py  2024_08_04_0030-4670df89376a_.py  2024_08_04_0034-fb196c4d6b2b_.py  2024_08_04_1919-a217e75c883f_create_profile_table.py  2024_08_07_2305-504eba719d7f_create_associaton_table_between_course_.py  2024_08_17_1344-cedad0c29271_rename_columns_for_user.py  2024_09_05_1328-fc48ac726355_.py  2024_09_05_1335-5f8b0a7dc427_.py  2024_09_19_2051-ceb02ef8b365_add_image_field_price_can_be_null.py  2024_09_25_1653-882bcbff619b_create_new_association_table_for_course_.py
templates/: base.html
templates/courses/: create_form.html  current_course.html  filtered_courses.html  main.html
templates/errors/: 401.html  base.html
templates/main/: main.html
templates/users/: login.html  my_created_course.html  my_enrolled_course.html  profile.html  registration.html  update_profile.html
tests/: conftest.py  test_courses.py  test_courses_users_relation_ship.py  test_users.py
(+19 files in other folders)
